# stats-models

./: .buildinfo  .codespellrc  .env  .git-blame-ignore-revs  .gitignore  .mailmap  .zenodo.json  BIDSStatsModel.json  CHANGELOG.md  CITATION.cff  Contrast.json  DummyContrasts.json  Edge.json  HRF.json  Makefile  Model.json  Node.json  Options.json  README.md  Transformations.json  default_model.html  genindex.html  guide.html  index.html  integration.html  intro.html  json_101.html  legacy.html  model-zoo.html  motivation.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.cfg  spec.html  validator.html  (+3 more)
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  package.yml  preview.yml
_autosummary/: bsmschema.models.BIDSStatsModel.html  bsmschema.models.Contrast.html  bsmschema.models.DummyContrasts.html  bsmschema.models.Edge.html  bsmschema.models.HRF.html  bsmschema.models.Model.html  bsmschema.models.Node.html  bsmschema.models.Options.html  bsmschema.models.Transformations.html
_sources/: guide.md  index.md  json_101.md  legacy.md  model-zoo.md  motivation.md  reference.ipynb  reference.md  reference.rst  spec.ipynb  walkthrough-1.ipynb  walkthrough-1.md  walkthrough-2.ipynb  walkthrough-intro.md
_sources/_autosummary/: bsmschema.models.BIDSStatsModel.rst  bsmschema.models.Contrast.rst  bsmschema.models.DummyContrasts.rst  bsmschema.models.Edge.rst  bsmschema.models.HRF.rst  bsmschema.models.Model.rst  bsmschema.models.Node.rst  bsmschema.models.Options.rst  bsmschema.models.Transformations.rst
_static/: documentation_options.js
bsmschema/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
bsmschema/bsmschema/: README.md  __main__.py  models.py
bsmschema/tests/: test_load.py
bsmschema/tests/data/: __init__.py  examples
specification/: .gitignore  _config.yml  _toc.yml  _validator.html  default_model.md  guide.md  index.md  integration.md  intro.md  json_101.md  legacy.md  motivation.md  reference.md  reference.rst  requirements.txt  spec.md  validator.rst  walkthrough-1.md  walkthrough-2.md  walkthrough-intro.md  walkthrough.md  walkthrough.rst
specification/_static/: custom.css
specification/_static/js/: jsoneditor.js
specification/examples/: model-example_smdl.json  model-walkthrough_smdl.json
specification/js/: jsoneditor.js
