
[metadata]
url = https://github.com/bids-standard/statsmodel
author = Christopher J. Markiewicz
author_email = crn.poldracklab@gmail.com
description = BIDS Stats Model specification and schema
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

description-file = README.rst

[options]
packages = find:
python_requires = >=3.7
install_requires =
    jupyter-book>=0.13
    jupytext
    autodoc_pydantic
    sphinxcontrib-matlabdomain
    pandas

[options.extras_require]
style =
    black

[tool.black]
line-length = 99
target-version = ['py37']
skip-string-normalization = true
extend-exclude = '_version.py|versioneer.py'
