[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bsmschema"
description = "A Pydantic schema for BIDS Stats Models"
authors = [
    {name = "BIDS Contributors", email = "bids.maintenance@gmail.com" },
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pydantic !=2.0a1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://bids-standard.github.io/stats-models/"
"Source code" = "https://github.com/bids-standard/stats-models"

[tool.hatch.build.targets.wheel]
packages = ["bsmschema"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }
