[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bsmschema"
description = "A Pydantic schema for BIDS Stats Models"
readme = "README.md"
authors = [
    {name = "BIDS Contributors", email = "bids.maintenance@gmail.com" },
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "pydantic >=2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://bids-standard.github.io/stats-models/"
"Source code" = "https://github.com/bids-standard/stats-models"

[tool.hatch.build.targets.wheel]
packages = ["bsmschema"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.ruff]
line-length = 99

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
