[metadata]
name = bsmschema
author = BIDS Contributors
author_email = bids.maintenance@gmail.com
version = 0.0.3
description = A Pydantic schema for BIDS Stats Models
url = https://github.com/bids-standard/stats-models
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8
install_requires =
    pydantic
packages = find_namespace:
