[metadata]
name = bsmschema
author = BIDS Contributors
author_email = bids.maintenance@gmail.com
version = 0.0.3
description = A Pydantic schema for BIDS Stats Models
url = https://github.com/bids-standard/stats-models
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.8
install_requires =
    pydantic != 2.0a1
packages = find_namespace:
